# jupyter-ml

./: .pre-commit-config.yaml  .yamllint  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: main.py
examples/: basic.ipynb
examples/ml-pipeline/: evaluate.ipynb  train.ipynb
jupyter_ml/: __init__.py  agent.py  config.py  llm.py  notebook.py  runner.py
scripts/: bootstrap.sh  regression.py
tests/: test_agent.py  test_notebook.py  test_patchcore.py  test_runner.py
tests/baselines/: evaluate.hash  evaluate.json  patchcore.json  train.hash  train.json
tests/regression/: test_outputs.py  test_regression.py
