[project]
name = "jupyter-ml"
version = "0.1.0"
description = "Notebook-native ML agent infrastructure"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nbformat>=5.9.0",
    "nbclient>=0.9.0",
    "ipykernel>=6.29.0",
]

[project.scripts]
jml = "cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
llm = [
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["jupyter_ml"]
